force-app/main/default/objects/Case/fields/Pro_req__c.field-meta.xml
<CustomField>
    <fullName>Pro_req__c</fullName>
    <description>propriétaire de la requête = la fil d&apos;attente</description>
    <label>Propriétaire de la requête</label>
    <length>100</length>
    <type>Text</type>
</CustomField>