force-app/main/default/objects/Case/fields/Produit_financier__c.field-meta.xml
<CustomField>
    <fullName>Produit_financier__c</fullName>
    <formula>TEXT(Contrat__r.Produit_financier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Produit financier</label>
    <type>Text</type>
</CustomField>