force-app/main/default/objects/Case/fields/SalesforceBaseURL__c.field-meta.xml
<CustomField>
    <fullName>SalesforceBaseURL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))</formula>
    <label>Salesforce base URL</label>
    <type>Text</type>
</CustomField>