force-app/main/default/objects/Case/fields/Sous_motif__c.field-meta.xml
<CustomField>
    <fullName>Sous_motif__c</fullName>
    <label>Sous-motif</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motif__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acte de décès</fullName>
            </value>
            <value>
                <fullName>Ajout/suppression de prestation</fullName>
            </value>
            <value>
                <fullName>Ajout/Suppression prestation</fullName>
            </value>
            <value>
                <fullName>Ajout de prestation</fullName>
            </value>
            <value>
                <fullName>Alerte futur impayé</fullName>
            </value>
            <value>
                <fullName>Amende</fullName>
            </value>
            <value>
                <fullName>AND/AEN</fullName>
            </value>
            <value>
                <fullName>ANTS - Fin de Contrat</fullName>
            </value>
            <value>
                <fullName>ANTS - Fins de Contrat</fullName>
            </value>
            <value>
                <fullName>Appel pour l&apos;acceptation</fullName>
            </value>
            <value>
                <fullName>Appel pour le paiement</fullName>
            </value>
            <value>
                <fullName>Appel pour les RC</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>Assistance 1er loyer</fullName>
            </value>
            <value>
                <fullName>Assistance outils</fullName>
            </value>
            <value>
                <fullName>Assistance virement</fullName>
            </value>
            <value>
                <fullName>Assitance 1er loyer</fullName>
                <isActive>false</isActive>
                <label>Assitance 1er loyer</label>
            </value>
            <value>
                <fullName>Attestation de fin de contrat</fullName>
            </value>
            <value>
                <fullName>Attestation fin de contrat</fullName>
            </value>
            <value>
                <fullName>AUCUN</fullName>
                <isActive>false</isActive>
                <label>AUCUN</label>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
            <value>
                <fullName>Avenant de transfert</fullName>
            </value>
            <value>
                <fullName>Avis de citation à partie civile</fullName>
            </value>
            <value>
                <fullName>Avis de classement à victime</fullName>
            </value>
            <value>
                <fullName>Carte carburant</fullName>
            </value>
            <value>
                <fullName>Carte grise</fullName>
            </value>
            <value>
                <fullName>Carte grise - cession</fullName>
            </value>
            <value>
                <fullName>Carte grise - demande démarche</fullName>
            </value>
            <value>
                <fullName>Carte grise - en cours de contrat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>