force-app/main/default/objects/Case/fields/Sous_statut__c.field-meta.xml
<CustomField>
    <fullName>Sous_statut__c</fullName>
    <label>Sous-statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Acceptation</fullName>
            </value>
            <value>
                <fullName>Recouvrement</fullName>
            </value>
            <value>
                <fullName>Paiement</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>VO</fullName>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
            <value>
                <fullName>PF Technique</fullName>
            </value>
            <value>
                <fullName>Réseau/partenaire</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>RC Retail</fullName>
            </value>
            <value>
                <fullName>RC Fleet</fullName>
            </value>
            <value>
                <fullName>Offre plus</fullName>
            </value>
            <value>
                <fullName>Grand Compte</fullName>
            </value>
            <value>
                <fullName>Crédit réseau</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>RISK VR</fullName>
            </value>
            <value>
                <fullName>VGF</fullName>
            </value>
            <value>
                <fullName>Validation supérieur</fullName>
            </value>
            <value>
                <fullName>Organes de la procédure</fullName>
            </value>
            <value>
                <fullName>Comptabilité</fullName>
            </value>
            <value>
                <fullName>Trésorerie</fullName>
            </value>
            <value>
                <fullName>Prestataire judiciaire</fullName>
            </value>
            <value>
                <fullName>Enquêteur</fullName>
            </value>
            <value>
                <fullName>Prestataires divers</fullName>
            </value>
            <value>
                <fullName>Services internes</fullName>
            </value>
            <value>
                <fullName>Organes judiciaires</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>