force-app/main/default/objects/Case/fields/Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_URL__c</fullName>
    <label>Survey URL</label>
    <type>TextArea</type>
</CustomField>