force-app/main/default/objects/Case/fields/Tempspassenfiledattente__c.field-meta.xml
<CustomField>
    <fullName>Tempspassenfiledattente__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Temps passés en file d&apos;attente(en jours)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>