force-app/main/default/objects/Case/fields/Tempspassepourtraitement__c.field-meta.xml
<CustomField>
    <fullName>Tempspassepourtraitement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Temps passés pour traitement(en jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>