force-app/main/default/objects/Case/fields/Tempspasssenstatutdattentejour__c.field-meta.xml
<CustomField>
    <fullName>Tempspasssenstatutdattentejour__c</fullName>
    <defaultValue>0</defaultValue>
    <description>US:P002156-1609</description>
    <label>Temps passés en statut d&apos;attente(jour)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>