force-app/main/default/objects/Case/fields/toCloseDoublon__c.field-meta.xml
<CustomField>
    <fullName>toCloseDoublon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ uniquement utilisé dans les batchs recouvrement pour savoir s&apos;il faut fermer la requête ou non</description>
    <label>toCloseDoublon</label>
    <type>Checkbox</type>
</CustomField>