force-app/main/default/objects/Case/recordTypes/Gestion_d_impay.recordType-meta.xml
<RecordType>
    <fullName>Gestion_d_impay</fullName>
    <active>true</active>
    <businessProcess>FR_DefaultSupportProcess</businessProcess>
    <label>Gestion d’impayé</label>
</RecordType>