force-app/main/default/objects/Case/recordTypes/Requ_te_standard.recordType-meta.xml
<RecordType>
    <fullName>Requ_te_standard</fullName>
    <active>true</active>
    <businessProcess>FR_DefaultSupportProcess</businessProcess>
    <label>Requête standard</label>
</RecordType>