force-app/main/default/objects/Case/validationRules/DU_LanguageCantBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_LanguageCantBeEmpty</fullName>
    <active>true</active>
    <description>Language can&apos;t be the EMPTY value.</description>
    <errorConditionFormula>ISPICKVAL(DU_Language__c , &quot;EMPTY&quot;)</errorConditionFormula>
    <errorDisplayField>DU_Language__c</errorDisplayField>
    <errorMessage>Language  can&apos;t be the EMPTY value.</errorMessage>
</ValidationRule>