force-app/main/default/objects/Case/validationRules/DU_PreferredLanguageCantBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_PreferredLanguageCantBeEmpty</fullName>
    <active>true</active>
    <description>Preferred Language can&apos;t be the EMPTY value.</description>
    <errorConditionFormula>ISPICKVAL(DU_PreferredLanguage__c, &quot;EMPTY&quot;)</errorConditionFormula>
    <errorDisplayField>DU_PreferredLanguage__c</errorDisplayField>
    <errorMessage>Preferred Language can&apos;t be the EMPTY value.</errorMessage>
</ValidationRule>