force-app/main/default/objects/Case/validationRules/DU_SubStatusCantBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>DU_SubStatusCantBeEmpty</fullName>
    <active>true</active>
    <description>Sub Status can&apos;t be the EMPTY value.</description>
    <errorConditionFormula>ISPICKVAL(DU_SubStatus__c , &quot;EMPTY&quot;)</errorConditionFormula>
    <errorDisplayField>DU_SubStatus__c</errorDisplayField>
    <errorMessage>Sub Status can&apos;t be the EMPTY value.</errorMessage>
</ValidationRule>