force-app/main/default/objects/Case/listViews/Acceptation_Refi_transfert_Case.listView-meta.xml
<ListView>
    <fullName>Acceptation_Refi_transfert_Case</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Contrat__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>Nom_de_la_concession__c</columns>
    <columns>N_Client__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Motif__c</columns>
    <columns>Sous_motif__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>OWNER_NAME</columns>
    <columns>Code_BER__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Résolue,Absence de retour client,Absence de retour partenaire,Requête déjà traitée (doublon),Requête annulée (le client ne souhaite pas donner suite),Erreur destinataire,Opportunité commerciale,Fusionnée</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Résolue (via requête fille)</value>
    </filters>
    <label>Acceptation Refi/transfert</label>
    <queue>Acceptation_Refi_transfert</queue>
    <sharedTo>
        <role>DORAB</role>
        <role>DORAB_Agent_Accept</role>
        <role>DORAB_Manager_Accept</role>
        <role>VWFS</role>
    </sharedTo>
</ListView>